--- a/publish/nativetools/template/ohos/build-profile.json5
+++ b/publish/nativetools/template/ohos/build-profile.json5
@@ -5,7 +5,8 @@
         "name": "default",
         "signingConfig": "default",
         "compatibleSdkVersion": "5.0.3(15)",
-        "runtimeOS": "HarmonyOS"
+        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": "6.0.1(21)"
       }
     ],
     "signingConfigs": []
